Changelog for GoodNews

- fixed "Created by" dropdown username display in mailing editor
- "Save" button in mailing editor has now MODX primary button color
- fixed a problem where selecting Collection rows didn't fire a resource form change ("Save" button wasn't activated)
- [#17] added newsletter send-log viewer and log-file export to CSV
- changed row expander icons for newsletter and subscribers grid to make it clear that rows can be expanded
- fixed issues with array fields in GoodNewsUpdateProfile snippet (fix by @Jako taken from Register snippet/Login package)
- removed superfluous default 'isset' parameter from getProperty calls (fix by @Jako taken from Register snippet/Login package)
- fixed a very stupid and old bug in lock-file handling
- mail subjects are now converted to charset of mailing (contributed by @mindeffects)
- fixed a missing index log entry in cron.php
- fixed a problem (since MODX 2.5.2) in goodnews.class.php constructor when executed in CLI mode
- fixed issues with array fields in GoodNewsSubscription snippet (fix by @Jako taken from Register snippet/Login package)


GoodNews 1.4.2-pl (2016-10-29)
--------------------------------------------------
- fixed subscriber "Created on" problem (conflicting field names since MODX 1.5.x users have an explicit createdon field)
- fixed emptying cachepwd field when subscription is confirmed
- fixed sending activation email if activationEmail property is not set
- fixed a problem with detecting extended fields in form
- fixed Custom Resource Properties Resolver in GoodNews container installation (unsubscribeResource and profileResource properties)
- fixed template assignement for sample resources on package upgrade
- corrected poor thinking in registration-confirm resource


GoodNews 1.4.1-pl (2016-03-02)
--------------------------------------------------
- Added all missing custom validators from Login extra