@@ -72,6 +72,15 @@ $settings['goodnews.auto_fix_imagesizes']->fromArray(array(
     'area'      => '',
 ), '', true, true);
 
+$settings['goodnews.auto_full_urls'] = $modx->newObject('modSystemSetting');
+$settings['goodnews.auto_full_urls']->fromArray(array(
+    'key'       => 'goodnews.auto_full_urls',
+    'value'     => '1',
+    'xtype'     => 'combo-boolean',
+    'namespace' => 'goodnews',
+    'area'      => '',
+), '', true, true);
+
 $settings['goodnews.auto_cleanup_subscriptions'] = $modx->newObject('modSystemSetting');
 $settings['goodnews.auto_cleanup_subscriptions']->fromArray(array(
     'key'       => 'goodnews.auto_cleanup_subscriptions',
