@@ -261,6 +261,8 @@ $_lang['goodnews.settings_admin_groups']                            = 'GoodNews 
 $_lang['goodnews.settings_admin_groups_desc']                       = 'Komma separierte Liste von MODX Benutzer-Gruppen, die zur Bearbeitung der GoodNews Einstellungen berechtigt sind.';
 $_lang['goodnews.settings_auto_fix_imagesizes']                     = 'Automatische Anpassung von Bildabmessungen (erfordert pThumb Extra)';
 $_lang['goodnews.settings_auto_fix_imagesizes_desc']                = 'Wenn eingeschaltet, werden Bilder die mittels WYSIWYG Editor eingefügt und deren Abmessungen angepasst wurden, automatisch auf die entsprechende Größe umgerechnet.';
+$_lang['goodnews.settings_auto_full_urls']                          = 'Automatische Umwandlung von URLs in absolute URLs';
+$_lang['goodnews.settings_auto_full_urls_desc']                     = 'Wenn eingeschaltet, werden URLs im Email Body bei Bedarf automatisch auf absolute URLs umgewandelt.';
 $_lang['goodnews.settings_auto_cleanup_subscriptions']              = 'Abonnements automatisch aufräumen';
 $_lang['goodnews.settings_auto_cleanup_subscriptions_desc']         = 'Wenn eingeschaltet, werden inaktive bzw. nicht aktivierte Abonnements inklusive zugehöriger MODX Benutzerkonten automatisch entfernt. Dies betrifft nur MODX Benutzerkonten, die mit GoodNews Metadaten verknüpft sind! MODX Benutzerkonten, welche MODX Benutzergruppen zugeordnet sind, bleiben unberührt!';
 $_lang['goodnews.settings_auto_cleanup_subscriptions_ttl']          = 'Zeitspanne für autom. Entfernen';
@@ -450,6 +452,8 @@ $_lang['setting_goodnews.admin_groups']                             = 'GoodNews 
 $_lang['setting_goodnews.admin_groups_desc']                        = 'Komma separierte Liste von MODX Benutzer-Gruppen, die zur Bearbeitung der GoodNews Einstellungen berechtigt sind.';
 $_lang['setting_goodnews.auto_fix_imagesizes']                      = 'Automatische Anpassung von Bildabmessungen (erfordert pThumb Extra)';
 $_lang['setting_goodnews.auto_fix_imagesizes_desc']                 = 'Wenn eingeschaltet, werden Bilder die mittels WYSIWYG Editor eingefügt und deren Abmessungen angepasst wurden, automatisch auf die entsprechende Größe umgerechnet.';
+$_lang['setting_goodnews.auto_full_urls']                           = 'Automatische Umwandlung von URLs in absolute URLs';
+$_lang['setting_goodnews.auto_full_urls_desc']                      = 'Wenn eingeschaltet, werden URLs im Email Body bei Bedarf automatisch auf absolute URLs umgewandelt.';
 $_lang['setting_goodnews.auto_cleanup_subscriptions']               = 'Abonnements automatisch aufräumen';
 $_lang['setting_goodnews.auto_cleanup_subscriptions_desc']          = 'Wenn eingeschaltet, werden inaktive bzw. nicht aktivierte Abonnements inklusive zugehöriger MODX Benutzerkonten automatisch entfernt. Dies betrifft nur MODX Benutzerkonten, die mit GoodNews Metadaten verknüpft sind! MODX Benutzerkonten, welche MODX Benutzergruppen zugeordnet sind, bleiben unberührt!';
 $_lang['setting_goodnews.auto_cleanup_subscriptions_ttl']           = 'Zeitspanne für autom. Entfernen';
