@@ -261,6 +261,8 @@ $_lang['goodnews.settings_admin_groups']                            = 'GoodNews 
 $_lang['goodnews.settings_admin_groups_desc']                       = 'Comma seperated list of MODX user-groups which have access to the GoodNews settings.';
 $_lang['goodnews.settings_auto_fix_imagesizes']                     = 'Automatically Adjust Image Sizes (pThumb extra required)';
 $_lang['goodnews.settings_auto_fix_imagesizes_desc']                = 'Wether or not images which are inserted with a WYSIWYG editor and are adjusted in its dimension, will be automatically converted to their appropriate dimension.';
+$_lang['goodnews.settings_auto_full_urls']                          = 'Automatically convert URLs to absolute URLs';
+$_lang['goodnews.settings_auto_full_urls_desc']                     = 'Wether or not URLs in email body are automatically converted to absolute URLs if necessary.';
 $_lang['goodnews.settings_auto_cleanup_subscriptions']              = 'Auto Cleanup Subscriptions';
 $_lang['goodnews.settings_auto_cleanup_subscriptions_desc']         = 'Wether or not never activated Subscriptions, including their corresponding MODX User-Accounts, will be removed automatically. This only concerns MODX User-Accounts which have GoodNews meta-data assigned! MODX User-Accounts which belongs to MODX User-Groups will stay untouched!.';
 $_lang['goodnews.settings_auto_cleanup_subscriptions_ttl']          = 'Time To Live Until Remove';
@@ -450,6 +452,8 @@ $_lang['setting_goodnews.admin_groups']                             = 'GoodNews 
 $_lang['setting_goodnews.admin_groups_desc']                        = 'Comma seperated list of MODX user-groups which have access to the GoodNews settings.';
 $_lang['setting_goodnews.auto_fix_imagesizes']                      = 'Automatically Adjust Image Sizes (pThumb extra required)';
 $_lang['setting_goodnews.auto_fix_imagesizes_desc']                 = 'Wether or not images which are inserted with a WYSIWYG editor and are adjusted in its dimension, will be automatically converted to their appropriate dimension.';
+$_lang['setting_goodnews.auto_full_urls']                           = 'Automatically convert URLs to absolute URLs';
+$_lang['setting_goodnews.auto_full_urls_desc']                      = 'Wether or not URLs in email body are automatically converted to absolute URLs if necessary.';
 $_lang['setting_goodnews.auto_cleanup_subscriptions']               = 'Auto Cleanup Subscriptions';
 $_lang['setting_goodnews.auto_cleanup_subscriptions_desc']          = 'Wether or not inactive or never activated Subscriptions, including their corresponding MODX User-Accounts, will be removed automatically. This only concerns MODX User-Accounts which have GoodNews meta-data assigned! MODX User-Accounts which belongs to MODX User-Groups stay untouched!.';
 $_lang['setting_goodnews.auto_cleanup_subscriptions_ttl']           = 'Time To Live Until Remove';
