@@ -261,6 +261,8 @@ $_lang['goodnews.settings_admin_groups']                            = 'Groupes A
 $_lang['goodnews.settings_admin_groups_desc']                       = 'Liste des groupes d\'utilisateurs MODX séparés par une virgule, qui ont accès aux paramètres GoodNews.';
 $_lang['goodnews.settings_auto_fix_imagesizes']                     = 'Ajuster automatiquement la taille des images (pThumb Extra nécessaire)';
 $_lang['goodnews.settings_auto_fix_imagesizes_desc']                = 'Convertir automatiquement aux dimensions appropriées ou non les images qui sont insérées avec un éditeur WYSIWYG et dont les dimensions sont ajustées.';
+$_lang['goodnews.settings_auto_full_urls']                          = 'Automatically convert URLs to absolute URLs';
+$_lang['goodnews.settings_auto_full_urls_desc']                     = 'Wether or not URLs in email body are automatically converted to absolute URLs if necessary.';
 $_lang['goodnews.settings_auto_cleanup_subscriptions']              = 'Autonettoyage des inscriptions';
 $_lang['goodnews.settings_auto_cleanup_subscriptions_desc']         = 'Si oui ou non supprimer automatiquement les souscriptions jamais activées, ainsi que leur compte utilisateur MODX associé. Cela ne concerne que les comptes utilisateur MODX qui ont des meta-data GoodNews associées! Les comptes utilisateur MODX qui appartiennent à des groupes d\'utilisateurs MODX ne seront pas touchés!';
 $_lang['goodnews.settings_auto_cleanup_subscriptions_ttl']          = 'Durée de vie jusqu\'à suppression';
@@ -450,6 +452,8 @@ $_lang['setting_goodnews.admin_groups']                             = 'Groupes A
 $_lang['setting_goodnews.admin_groups_desc']                        = 'Liste des groupes d\'utilisateurs MODX séparés par une virgule, qui ont accès aux paramètres GoodNews.';
 $_lang['setting_goodnews.auto_fix_imagesizes']                      = 'Ajuster automatiquement la taille des images (pThumb requis)';
 $_lang['setting_goodnews.auto_fix_imagesizes_desc']                 = 'Convertir automatiquement aux dimensions appropriées ou non les images qui sont insérées avec un éditeur WYSIWYG et dont les dimensions sont ajustées.';
+$_lang['setting_goodnews.auto_full_urls']                           = 'Automatically convert URLs to absolute URLs';
+$_lang['setting_goodnews.auto_full_urls_desc']                      = 'Wether or not URLs in email body are automatically converted to absolute URLs if necessary.';
 $_lang['setting_goodnews.auto_cleanup_subscriptions']               = 'Autonettoyage des inscriptions';
 $_lang['setting_goodnews.auto_cleanup_subscriptions_desc']          = 'Si oui ou non supprimer automatiquement les souscriptions jamais activées ou inactives, ainsi que leur compte utilisateur MODX associé. Cela ne concerne que les comptes utilisateur MODX qui ont des meta-data GoodNews associées! Les comptes utilisateur MODX qui appartiennent à des groupes d\'utilisateurs MODX ne seront pas touchés!';
 $_lang['setting_goodnews.auto_cleanup_subscriptions_ttl']           = 'Durée de vie jusqu\'à suppression';
