@@ -290,17 +290,17 @@ class GoodNewsMailing {
 
         // Process embeded CSS
         $html = $this->_inlineCSS($html);
-
-        // Process full URLs
-        $base = $this->modx->getOption('site_url');
         
         // AutoFixImageSizes if activated in settings
         if ($this->modx->getOption('goodnews.auto_fix_imagesizes', null, true)) {
             $html = $this->_autoFixImageSizes($base, $html);
         }
         
-        // Make full URLs
-        $html = $this->_fullUrls($base, $html);
+        // Make full URLs if activated in settings
+        if ($this->modx->getOption('goodnews.auto_full_urls', null, true)) {
+            $base = $this->modx->getOption('site_url');
+            $html = $this->_fullUrls($base, $html);
+        }
 
         return $html;
     }
