@@ -36,6 +36,7 @@ class SettingsUpdateProcessor extends modProcessor {
             'statusemail_chunk',
             'admin_groups',
             'auto_fix_imagesizes',
+            'auto_full_urls',
             'auto_cleanup_subscriptions',
             'auto_cleanup_subscriptions_ttl',
             'mailing_bulk_size',
