@@ -1,5 +1,6 @@
 Changelog for GoodNews
 
+- added system setting to enable/disable automatic URL conversion in email body
 - fixed "Created by" dropdown username display in mailing editor
 - "Save" button in mailing editor has now MODX primary button color
 - fixed a problem where selecting Collection rows didn't fire a resource form change ("Save" button wasn't activated)
